--- a/css/style.less
+++ b/css/style.less
@@ -193,6 +193,7 @@ body {
 header {
 	background: @header;
 	h1 {
+		font-family: @light;
 		text-transform: uppercase;
 		text-align: center;
 		margin-bottom: 0.55em; /* 20px */
@@ -445,6 +446,7 @@ div.project {
 		font-family: @light;
 		line-height: 1.5;
 		a {
+			font-weight: 600;
 			font-size: initial;
     		text-decoration: blink;
     		color: #263238;
