--- a/css/style.less
+++ b/css/style.less
@@ -446,8 +446,7 @@ div.project {
 		font-family: @light;
 		line-height: 1.5;
 		a {
-			font-weight: 600;
-			font-size: initial;
+			font-size: inherit;
     		text-decoration: blink;
     		color: #263238;
     		&:hover,&:focus {
