--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -2,7 +2,10 @@
  * Syntax highlighting styles
  */
 .highlight {
-    background: #fff;
+    background: #ebebeb;
+    padding: 10px;
+    border: 1px solid #cdcdcd;
+    border-radius: 3px;
 //    @extend %vertical-rhythm;
 
     .highlighter-rouge & {
