--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,8 @@
     <script src="{{ " /libs/jquery-3.1.0/jquery-3.1.0.min.js " | prepend: site.baseurl }}"></script>
     <!--	Common Script	-->
     <script src="{{ " /js/common.js " | prepend: site.baseurl }}"></script>
+
+    {% include yandex-metrika.html %}
 </body>
 
 </html>
