--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
                         <nav role="navigation">
                             <ul class="nav-panel">
                                 <li><a href="{{ site.baseurl }}/">Home</a></li>
-                                <li><a href="{{ site.baseurl }}/about.html">About</a></li>
+                                <li><a href="{{ site.baseurl }}/about">About</a></li>
                             </ul>
                         </nav>
                     </div>
