--- a/_sass/bootstrap-v4.0.0-alpha.3/_variables.scss
+++ b/_sass/bootstrap-v4.0.0-alpha.3/_variables.scss
@@ -190,7 +190,7 @@ $display2-weight: 300 !default;
 $display3-weight: 300 !default;
 $display4-weight: 300 !default;
 
-$headings-margin-bottom: ($spacer / 2) !default;
+$headings-margin-bottom: ($spacer) !default;
 $headings-font-family:   inherit !default;
 $headings-font-weight:   500 !default;
 $headings-line-height:   1.1 !default;
