--- a/_sass/modules/_article.scss
+++ b/_sass/modules/_article.scss
@@ -26,7 +26,7 @@
 	}
 
 	.footer {
-		padding: 15px 0;
+		padding: 10px 0;
 		border-top: 1px solid #ebebeb;
 	}
 
@@ -36,5 +36,6 @@
 
 	.data {
 		color: #cdcdcd;
+        margin: 0;
 	}
 }
