add google analytics

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,7 @@
     <script src="{{ " /js/common.js " | prepend: site.baseurl }}"></script>
 
     {% include yandex-metrika.html %}
+    {% include google-analytics.html %}
 </body>
 
 </html>
