--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -1,11 +1,11 @@
 @import
-	"modules/help-class",
-	"modules/header",
-	"modules/main",
-	"modules/footer",
-	"modules/navigation",
-	"modules/social",
-	"modules/fixed-panel",
-	"modules/bat",
-	"modules/article"
-;
+'modules/color',
+'modules/help-class',
+'modules/header',
+'modules/main',
+'modules/footer',
+'modules/navigation',
+'modules/social',
+'modules/fixed-panel',
+'modules/bat',
+'modules/article';
