--- a/_sass/modules/_header.scss
+++ b/_sass/modules/_header.scss
@@ -1,13 +1,13 @@
 header {
-	padding: 30px 0;
+    padding: 30px 0;
 
-	.title {
-		color: #373a3c;
-	}
+    .title {
+        color: $text-color-2;
+    }
 
-	.site-title {
-		font-size: 2.5rem;
-	}
+    .site-title {
+        font-size: 2.5rem;
+    }
 }
 
 .header {
