--- a/_sass/modules/_bat.scss
+++ b/_sass/modules/_bat.scss
@@ -1,73 +1,81 @@
-/*==============================/
-/---------- The Bat ------------/
-/==============================*/
+//==============================
+//---------- The Bat -----------
+//==============================
+
 .thebat {
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 150px;
-  height: 150px;
-  margin: 15px;
-  overflow: hidden;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 150px;
+    height: 150px;
+    margin: 15px;
+    overflow: hidden;
+
+    &.night {
+        position: relative;
+        display: block;
+        opacity: 0;
+        transition: all .4s ease 1.1s;
+    }
+
+    &.night::after {
+        content: "I'm the night";
+        position: absolute;
+        display: inline-block;
+        right: 0;
+        padding: 1px 10px;
+        background-color: $background-color-1;
+        border-radius: 10px;
+        z-index: 10;
+    }
+
+    &.night::before {
+        content: '';
+        position: absolute;
+        top: 5px;
+        left: 55px;
+        width: 0;
+        height: 0;
+        border: 15px solid transparent;
+        border-color: $border-color transparent transparent $border-color;
+        z-index: 5;
+    }
 }
-.thebat .night {
-  position: relative;
-  display: block;
-  opacity: 0;
-  transition: all .4s ease 1.1s;
+
+.thebat::before {
+    content: '';
+    position: absolute;
+    top: -101px;
+    left: 0;
+    display: block;
+    background: url('../images/bat.png') no-repeat center;
+    width: 80px;
+    height: 125px;
+    transform: rotate(180deg);
+    transition: all 1s ease-in-out;
 }
-.thebat .night:after {
-  content: "I'm the night";
-  position: absolute;
-  display: inline-block;
-  right: 0;
-  padding: 1px 10px;
-  background-color: #ebebeb;
-  border-radius: 10px;
-  z-index: 10;
+
+.thebat::after {
+    content: '';
+    position: absolute;
+    top: -1px;
+    left: 0;
+    width: 80px;
+    height: 1px;
+    box-shadow: 0 0 3px 1px $box-sadow-color;
+    transition: all .3s;
 }
-.thebat .night:before {
-  content: "";
-  position: absolute;
-  top: 5px;
-  left: 55px;
-  width: 0;
-  height: 0;
-  border: 15px solid transparent;
-  border-color: #ebebeb transparent transparent #ebebeb;
-  z-index: 5;
-}
-.thebat:before {
-  content: '';
-  position: absolute;
-  top: -101px;
-  left: 0;
-  display: block;
-  background: url(../images/bat.png) no-repeat center;
-  width: 80px;
-  height: 125px;
-  -webkit-transform: rotate(180deg);
-  -moz-transform: rotate(180deg);
-  -ms-transform: rotate(180deg);
-  transform: rotate(180deg);
-  transition: all 1s ease-in-out;
-}
-.thebat:after {
-	content: '';
-	position: absolute;
-	top: -1px;
-	left: 0;
-	width: 80px;
-	height: 1px;
-	box-shadow: 0px 0px 3px 1px rgba(0,0,0,0.4);
-	transition: all .3s;
-}
-.thebat:hover .night {
-  opacity: 1;
-}
-.thebat:hover:before {
-  top: 20px;
-}
-.thebat:hover:after {
-  top: -5px;
+
+.thebat:hover {
+    &.night {
+        opacity: 1;
+    }
+
+    &::before {
+        top: 20px;
+    }
+
+    &::after {
+        top: -5px;
+    }
 }
