--- a/_sass/modules/_color.scss
+++ b/_sass/modules/_color.scss
@@ -7,3 +7,17 @@ $icon-color:         #d5d5d5;
 $border-color:       $background-color-1;
 
 $text-color-1:       #cdcdcd;
+$text-color-2:       #373a3c;
+$text-color-3:       #333;
+$text-color-4:       #555;
+$text-color-5:       #000;
+
+$box-sadow-color:    rgba(0, 0, 0, .4);
+
+$footer-color:       #eee;
+
+$gradient-color-1:   #efefef;
+
+$gradient-color-2:   #fff;
+
+$gradient:           linear-gradient(to top, $gradient-color-1, $gradient-color-2);
