--- a/_sass/modules/_main.scss
+++ b/_sass/modules/_main.scss
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
     height: 100%;
 }
 
@@ -12,7 +13,7 @@ html, body {
 }
 
 main {
-	padding: 50px 0;
+    padding: 50px 0;
 }
 
 .post-content {
