--- a/_sass/modules/_navigation.scss
+++ b/_sass/modules/_navigation.scss
@@ -1,25 +1,24 @@
 nav {
+    .nav-panel {
+        padding: 0;
+        margin: 0;
+        list-style: none;
+        height: 60px;
 
-	.nav-panel {
-		padding: 0;
-		margin: 0;
-		list-style: none;
-		height: 60px;
+        li {
+            display: inline-block;
+            margin-right: 15px;
+            line-height: 59px;
 
-		li {
-			display: inline-block;
-			margin-right: 15px;
-			line-height: 59px;
+            &:last-child {
+                margin-right: 0;
+            }
+        }
 
-			&:last-child {
-				margin-right: 0;
-			}
-		}
-
-		a {
-			font-size: 18px;
-			text-transform: uppercase;
-			color: #333;
-		}
-	}
+        a {
+            font-size: 18px;
+            text-transform: uppercase;
+            color: $text-color-3;
+        }
+    }
 }
