--- a/_sass/modules/_social.scss
+++ b/_sass/modules/_social.scss
@@ -1,23 +1,23 @@
 .social {
-	padding: 0;
-	margin: 0;
-	list-style: none;
+    padding: 0;
+    margin: 0;
+    list-style: none;
 
-	li {
-		display: inline-block;
-		margin-right: 15px;
+    li {
+        display: inline-block;
+        margin-right: 15px;
 
-		&:last-child {
-			margin-right: 0;
-		}
-	}
+        &:last-child {
+            margin-right: 0;
+        }
+    }
 
-	a {
-		color: #555;
-		transition: all .3s;
+    a {
+        color: $text-color-4;
+        transition: all .3s;
 
-		&:hover {
-			color: #000;
-		}
-	}
+        &:hover {
+            color: $text-color-5;
+        }
+    }
 }
