--- a/_sass/modules/_bat.scss
+++ b/_sass/modules/_bat.scss
@@ -34,6 +34,20 @@
         box-shadow: 0 0 3px 1px $box-sadow-color;
         transition: all .3s;
     }
+
+    &:hover {
+        .night {
+            opacity: 1;
+        }
+
+        &::before {
+            top: 20px;
+        }
+
+        &::after {
+            top: -5px;
+        }
+    }
 }
 
 .night {
@@ -63,19 +77,5 @@
         border: 15px solid transparent;
         border-color: $border-color transparent transparent $border-color;
         z-index: 5;
-    }
-}
-
-.thebat:hover {
-    .night {
-        opacity: 1;
-    }
-
-    &::before {
-        top: 20px;
-    }
-
-    &::after {
-        top: -5px;
     }
 }
