fix btn for article

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@ layout: default
 	<div class="footer">
 		<div class="row">
 			<div class="col-xs-6">
-				<a href="{{ site.baseurl }}/" class="read">Back</a>
+				<a href="{{ site.baseurl }}/" class="btn btn-default">Back</a>
 			</div>
 			<div class="col-xs-6 text-right">
 				<script src="//yastatic.net/es5-shims/0.0.2/es5-shims.min.js"></script>
