--- a/_sass/modules/_buttons.scss
+++ b/_sass/modules/_buttons.scss
@@ -9,7 +9,9 @@
 
     &:hover,
     &:focus {
-        box-shadow: 0 1px 3px 1px $box-sadow-color;
+        box-shadow: inset 0 2px 3px 0 $box-sadow-color;
+        text-decoration: none;
+        color: inherit;
     }
 
     &-default {
