--- a/_sass/modules/_buttons.scss
+++ b/_sass/modules/_buttons.scss
@@ -6,6 +6,7 @@
     border: 1px solid;
     border-radius: 2px;
     text-decoration: none;
+    transition: all .3s;
 
     &:hover,
     &:focus {
