--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -1,5 +1,6 @@
 @import
 'modules/color',
+'modules/type',
 'modules/buttons',
 'modules/help-class',
 'modules/header',
@@ -7,6 +8,5 @@
 'modules/footer',
 'modules/navigation',
 'modules/social',
-'modules/fixed-panel',
 'modules/bat',
 'modules/article';
