--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
     <!-- Content -->
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 col-md-8 offset-md-2">
+            <div class="col-xs-12 col-lg-8 offset-lg-2">
                 <div class="row">
                     <div class="col-xs-6">
                         <nav role="navigation">
