--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header role="banner">
 	<div class="container">
 		<div class="row">
-			<div class="col-xs-12 col-md-8 offset-md-2">
+			<div class="col-xs-12 col-lg-8 offset-lg-2">
 				{% if page.url == '/' %}
 					<h1><a class="title" href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
 				{% else %}
