--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
         <main>
             <div class="container">
                 <div class="row">
-                    <div class="col-xs-12 offset-sm-0 col-md-8 offset-md-2">
+                    <div class="col-xs-12 col-lg-8 offset-lg-2">
                         {{ content }}
                     </div>
                 </div>
