add link for media style

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -10,3 +10,11 @@
 'modules/social',
 'modules/bat',
 'modules/article';
+
+// Media style
+@import
+'media/1199-xl',
+'media/991-lg',
+'media/767-md',
+'media/575-sm',
+'media/320-xs';
