small fix for article style

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -25,7 +25,7 @@
 //==========================
 @import 'layout/site';
 @import 'layout/header';
-// @import 'layout/main';
+@import 'layout/main';
 @import 'layout/footer';
 
 // PAGES IMPORT
