--- a/_sass/modules/_buttons.scss
+++ b/_sass/modules/_buttons.scss
@@ -5,12 +5,17 @@
 //===============================
 
 .btn {
+    text-decoration: none;
     transition: all .3s;
     display: inline-block;
     line-height: 1;
     padding: 6px 28px;
     border-radius: 1px;
     outline: none;
+
+    &:hover {
+        text-decoration: none;
+    }
 }
 
 .btn-default {
