--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,3 +28,7 @@
         </div>
     </div>
 </footer>
+
+<div id="toTop" class="btn-scroll-top">
+    <i class="fa fa-4x fa-angle-up" aria-hidden="true"></i>
+</div>
