--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,9 @@
                 </div>
             </div>
         </main>
+        <div id="toTop" class="btn-scroll-top">
+            <i class="fa fa-4x fa-angle-up" aria-hidden="true"></i>
+        </div>
     </div>
 
     {% include footer.html %}
