--- a/css/main.scss
+++ b/css/main.scss
@@ -6,5 +6,6 @@
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
         "syntax-highlighting",
-        "style"
+        "style",
+        "media"
 ;
