--- a/_sass/_common.scss
+++ b/_sass/_common.scss
@@ -75,7 +75,7 @@ svg {
     }
 
     &_background {
-        background: url('/images/bg-header-1.jpg') no-repeat top center;
+        background: url('/images/bg-header.jpg') no-repeat top center;
     }
 
     &_glass {
