--- a/_includes/icon-github.html
+++ b/_includes/icon-github.html
@@ -1,1 +1,1 @@
-<a href="https://github.com/{{ site.username }}" target="_blank">{{ site.username }}</a>
+<a href="https://github.com/{{ site.github.username }}" target="_blank">{{ site.github.username }}</a>
