--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,4 +25,6 @@
 
     <script src="https://use.fontawesome.com/10016a2fb2.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    {% include google-analytics.html %}
+    {% include yandex-metrika.html %}
 </head>
