--- a/_sass/components/_buttons.scss
+++ b/_sass/components/_buttons.scss
@@ -12,7 +12,7 @@
     text-decoration: none;
     text-transform: uppercase;
     text-align: center;
-    padding: 8px 24px;
+    padding: 8px 24px 7px;
     border: 1px solid transparent;
     border-radius: 2px;
     vertical-align: middle;
