--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@ layout: index
     </div>
     <div class="article__footer">
         <div class="article__col">
-            <a href="{{ site.baseurl }}/" class="btn btn_default">Back</a>
+            <a href="{{ site.baseurl }}/" class="btn btn_default">Назад</a>
         </div>
         <div class="article__col article__col_right">
             <script src="//yastatic.net/es5-shims/0.0.2/es5-shims.min.js"></script>
