--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
     </filter>
 </svg>
 
-<header class="header header_background header_glass txt-xs-center" role="banner">
+<header class="header header_background header_glass txt-xs-center">
     <div class="avatar avatar_center">
         <img class="avatar__img" src="/images/avatar.jpg" alt="deeppines">
     </div>
