--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -10,7 +10,7 @@
 
         <div class="flex-container">
 
-            <main class="main" role="main">
+            <main class="main">
                 {{ content }}
             </main>
 
