--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,3 +4,6 @@
         <a href="https://jekyllrb.com/" target="_blank" rel="nofollow">Jekyll</a>, with a custom theme.
     </p>
 </footer>
+
+{% include google-analytics.html %}
+{% include yandex-metrika.html %}
