--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,5 +23,5 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <script src="https://use.fontawesome.com/10016a2fb2.js"></script>
+    <script src="https://use.fontawesome.com/10016a2fb2.js" async></script>
 </head>
