--- a/_sass/core/type/_variables.scss
+++ b/_sass/core/type/_variables.scss
@@ -9,7 +9,7 @@
 $font-title:  'Lobster', cursive;
 $font-header: 'Roboto', sans-serif;
 $font-text:   'Roboto', sans-serif;
-$font-code:   'Roboto Mono', monospace;
+$font-code:    monospace;
 
 // Color for links
 
