--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -27,11 +27,8 @@
 @import 'components/info-item';
 @import 'components/table-skills';
 @import 'components/item-project';
+@import 'components/error';
 
 // OTHER STYLE IMPORT
 //==========================
 @import 'common';
-
-// MEDIA IMPORT
-//==========================
-@import 'media';
