--- a/_sass/core/type/_setting.scss
+++ b/_sass/core/type/_setting.scss
@@ -14,6 +14,7 @@ html {
     @media (max-width: 767px) {
         font-size: 88%;
     }
+
 }
 
 body {
@@ -62,7 +63,7 @@ h6 {
 }
 
 small {
-    font-size: .8rem;
+    font-size: 75%;
 }
 
 // List setting and paragraphs
