del role banner

--- a/_includes/header-h1.html
+++ b/_includes/header-h1.html
@@ -1,6 +1,6 @@
 {% include filter.html %}
 
-<header class="header header_background header_glass txt-xs-center" role="banner">
+<header class="header header_background header_glass txt-xs-center">
     <div class="avatar avatar_center">
         <img class="avatar__img" src="/images/avatar.jpg" alt="deeppines">
     </div>
