--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,19 @@
 {% include head.html %}
 
 <body>
-    {{ content }}
+    <div class="wrapper wrapper_full">
+
+        {% include header-h1.html %}
+
+        <div class="flex-container">
+
+            <main class="main" role="main">
+                {{ content }}
+            </main>
+
+            {% include footer.html %}
+        </div>
+    </div>
 </body>
 
 </html>
