--- a/_sass/_common.scss
+++ b/_sass/_common.scss
@@ -19,8 +19,11 @@ body {
 }
 
 .wrapper {
+    display: flex;
+    flex-flow: row wrap;
     width: 100%;
     max-width: 1140px;
+    min-height: 100%;
     margin: 45px auto 25px;
     box-shadow: 0 5px 15px 1px transparentize($black, .7);
 
@@ -61,12 +64,6 @@ body {
     display: flex;
     flex-flow: row wrap;
     width: 100%;
-    min-height: calc(100% - 300px);
-
-    // Small devices (landscape phones, less than 768px)
-    @media (max-width: 767px) {
-        min-height: calc(100% - 200px);
-    }
 }
 
 .header {
@@ -75,6 +72,7 @@ body {
     padding: 20px 0;
     overflow: hidden;
     background-color: $gunmetal;
+    align-self: flex-start;
 
     // Small devices (landscape phones, less than 768px)
     @media (max-width: 767px) {
@@ -150,14 +148,13 @@ body {
         transition: max-width .4s;
         max-width: none;
         height: auto;
-        min-height: 50%;
     }
 }
 
 .footer {
     width: 100%;
-    height: 50px;
     padding: 15px;
+    align-self: flex-end;
 }
 
 .info {
