--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,18 +4,18 @@
 {% include head.html %}
 
 <body>
-    <div class="wrapper wrapper_full">
+    <div class="wrapper">
 
         {% include header.html %}
 
         <div class="flex-container">
-
             <main class="main" role="main">
                 {{ content }}
             </main>
-
-            {% include footer.html %}
         </div>
+
+        {% include footer.html %}
+
     </div>
 </body>
 
