--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
         {% include header-h1.html %}
 
         <div class="flex-container">
-            <main class="main" role="main">
+            <main class="main">
                 {{ content }}
             </main>
         </div>
