update header title link

--- a/_includes/header-h1.html
+++ b/_includes/header-h1.html
@@ -5,6 +5,6 @@
         <img class="avatar__img" src="/images/avatar.jpg" alt="deeppines">
     </div>
     <h1 class="title">
-        <span>lk</span><a class="title__link" href="{{ site.baseurl }}/">blog</a>
+        <span>deep</span><a class="title__link" href="{{ site.baseurl }}/">pines</a>
     </h1>
 </header>
