--- a/_includes/header-nav.html
+++ b/_includes/header-nav.html
@@ -5,7 +5,7 @@
         <img class="avatar__img" src="/images/avatar.jpg" alt="deeppines">
     </div>
     <div class="title">
-        <span>lk</span><a class="title__link" href="{{ site.baseurl }}/">blog</a>
+        <span>deep</span><a class="title__link" href="{{ site.baseurl }}/">pines</a>
     </div>
     {% if page.url == '/cv/' %}
     <nav class="nav" role="navigation">
