--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,6 +5,6 @@
         <img class="avatar__img" src="/images/avatar.jpg" alt="deeppines">
     </div>
     <div class="title">
-        <span>lk</span><a class="title__link" href="{{ site.baseurl }}/">blog</a>
+        <span>deep</span><a class="title__link" href="{{ site.baseurl }}/">pines</a>
     </div>
 </header>
