--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -23,7 +23,7 @@
 @import 'components/navigation';
 @import 'components/profile';
 @import 'components/about';
-@import 'components/contact';
+@import 'components/list';
 @import 'components/info-item';
 @import 'components/table-skills';
 @import 'components/item-project';
