--- a/_sass/_common.scss
+++ b/_sass/_common.scss
@@ -76,7 +76,7 @@ body {
 
     // Small devices (landscape phones, less than 768px)
     @media (max-width: 767px) {
-        height: 150px;
+        height: 180px;
         padding: 10px 0;
     }
 
@@ -158,13 +158,13 @@ body {
 }
 
 .info {
-    padding: 0 2.5em 30px;
+    margin-bottom: 100px;
 
     @media (max-width: 575px) {
-        padding: 0 0 30px;
+        
     }
 
-    &_header {
+    &__header {
         font-size: 1.25em;
         font-weight: 700;
         text-transform: uppercase;
@@ -178,7 +178,7 @@ body {
 
     &__header {
         line-height: 1;
-        margin-bottom: 1rem;
+        margin-bottom: 3rem;
         color: $gunmetal;
     }
 }
@@ -187,4 +187,10 @@ body {
     max-width: 650px;
     margin-left: auto;
     margin-right: auto;
+}
+
+.page-wrap {
+    max-width: 650px;
+    margin-right: auto;
+    margin-left: auto;
 }
