--- a/_sass/components/_info-item.scss
+++ b/_sass/components/_info-item.scss
@@ -13,21 +13,26 @@
     }
 
     &_name {
-        font-size: .8em;
         text-transform: uppercase;
-        line-height: 1.2;
+        line-height: 1.5;
         display: block;
+        margin-bottom: 5px;
         color: $gunmetal;
     }
 
     &_sub {
-        font-size: .7em;
+        font-size: .85em;
         color: $gunmetal;
         margin-right: 15px;
         opacity: .65;
 
         &:last-child {
             margin-right: 0;
+
+            @media (max-width: 576px) {
+                display: block;
+                margin-top: 10px;
+            }
         }
 
         .fa {
@@ -49,7 +54,6 @@
     }
 
     &_text {
-        font-size: .8em;
         font-weight: 300;
         line-height: 1.5;
 
