--- a/_sass/components/_table-skills.scss
+++ b/_sass/components/_table-skills.scss
@@ -8,10 +8,12 @@
     width: 100%;
     color: $gunmetal;
     margin-bottom: 40px;
+    border-spacing: inherit;
 
     th,
     td {
-        border-right: 1px solid transparentize($light-red-ochre, .7);
+        width: 25%;
+        border-right: 1px solid transparentize($gunmetal, .7);
 
         &:last-child {
             border-right: 0;
@@ -19,7 +21,6 @@
         }
 
         &:first-child {
-            width: 33.333333%;
             padding-left: 0;
         }
     }
@@ -28,11 +29,13 @@
         font-size: .9rem;
         line-height: 1;
         text-transform: uppercase;
+        text-align: left;
         padding: 20px;
         opacity: .75;
 
-        @media (max-width: 419px) {
+        @media (max-width: 576px) {
             padding: 20px 5px;
+            font-size: .75rem;
         }
     }
 
@@ -41,8 +44,9 @@
         line-height: 1;
         padding: 10px 20px;
 
-        @media (max-width: 419px) {
+        @media (max-width: 576px) {
             padding: 10px 5px;
+            font-size: .75rem;
         }
     }
 
@@ -57,7 +61,7 @@
     tbody {
         + thead {
             th {
-                border-top: 1px solid transparentize($light-red-ochre, .7);
+                border-top: 1px solid transparentize($gunmetal, .7);
                 padding-top: 25px;
             }
         }
