--- a/_sass/components/_title.scss
+++ b/_sass/components/_title.scss
@@ -8,6 +8,7 @@
     display: block;
     font-family: $font-title;
     font-size: 2.5rem;
+    line-height: 1;
     text-align: center;
     margin: 15px 0 10px;
     color: $wight;
