--- a/_sass/components/_list.scss
+++ b/_sass/components/_list.scss
@@ -43,6 +43,7 @@
     }
 
     &__col {
+        position: relative;
         display: table-cell;
         padding: 8px;
         border-bottom: 1px solid transparentize($purple-navy, .75);
