--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,8 +7,17 @@
     <meta name="yandex-verification" content="20abe9faaab967a1" />
     <meta name="google-site-verification" content="Vp7xYEg1BC7TF1ZEtp-xtgjkRdniJ4BGxYmNB2ewcMI" />
 
-    <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
-    <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}"> {% if page.url != '/' %} {% include og.html %} {% endif %}
+    <title>
+        {% if page.title %}
+            {{ page.title | escape }}
+        {% else %}
+            {{ site.title | escape }}
+        {% endif %}
+    </title>
+    <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+    {% if page.url != '/' %}
+        {% include og.html %}
+    {% endif %}
 
     <link rel="stylesheet" href="{{ '/css/main.css' | prepend: site.baseurl }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
