--- a/_includes/header-nav.html
+++ b/_includes/header-nav.html
@@ -8,12 +8,12 @@
         <span>deep</span><a class="title__link" href="{{ site.baseurl }}/">pines</a>
     </div>
     {% if page.url == '/cv/' %}
-    <nav class="nav" role="navigation">
+    <nav class="nav">
         <a class="nav__link nav__link_active" href="{{ site.baseurl }}/cv">CV</a>
         <a class="nav__link" href="{{ site.baseurl }}/projects">Portfolio</a>
     </nav>
     {% else %}
-    <nav class="nav" role="navigation">
+    <nav class="nav">
         <a class="nav__link" href="{{ site.baseurl }}/cv">CV</a>
         <a class="nav__link nav__link_active" href="{{ site.baseurl }}/projects">Portfolio</a>
     </nav>
