update ln contact

--- a/_includes/cv/contacts.html
+++ b/_includes/cv/contacts.html
@@ -26,7 +26,7 @@
                 LinkedIn:
             </span>
             <span class="list__col">
-                <a class="list__link" href="https://www.linkedin.com/in/egor-kirdyashkin-37ba35102/">egor-kirdyashkin</a>
+                <a class="list__link" href="https://www.linkedin.com/in/egorkir/">egorkir</a>
             </span>
         </li>
         <li class="list__item list__item_row">
