--- a/_includes/cv/experience.html
+++ b/_includes/cv/experience.html
@@ -9,7 +9,7 @@
             </span>
             <span class="info-item_sub">
                 <i class="fa fa-calendar" aria-hidden="true"></i>Jan 2016 — until now
-                <sup class="info-item_sub-sup">1 year 10 months</sup>
+                <sup class="info-item_sub-sup">2 years 1 month</sup>
             </span>
         </div>
         <div class="info-item_text">
