--- a/_includes/cv/resume.html
+++ b/_includes/cv/resume.html
@@ -14,7 +14,7 @@
                 Дата рождения:
             </span>
             <span class="list__col">
-                25 года, 27 ноября 1992
+                25 лет, 27 ноября 1992
             </span>
         </li>
         <li class="list__item list__item_row">
