--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -1,7 +1,8 @@
 // scss-lint:disable all
-/**
- * Syntax highlighting styles
- */
+
+// ============================
+// Syntax highlighting styles
+// ============================
 
 // ADD SITE COLOR VARIABLES
 @import 'core/colors';
