--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,13 +9,7 @@
     <meta name="yandex-verification" content="20abe9faaab967a1" />
     <meta name="google-site-verification" content="Vp7xYEg1BC7TF1ZEtp-xtgjkRdniJ4BGxYmNB2ewcMI" />
 
-    <title>
-        {% if page.title %}
-            {{ page.title | escape }}
-        {% else %}
-            {{ site.title | escape }}
-        {% endif %}
-    </title>
+    <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
     <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
     {% if page.url != '/' %}
         {% include og.html %}
