--- a/_includes/cv/contacts.html
+++ b/_includes/cv/contacts.html
@@ -22,7 +22,7 @@
         </li>
         <li class="list__item list__item_row">
             <span class="list__col list__col_icon">
-                <i class="fab fa-linkedin" aria-hidden="true"></i>
+                <i class="fab fa-linkedin-in" aria-hidden="true"></i>
                 LinkedIn:
             </span>
             <span class="list__col">
@@ -31,7 +31,7 @@
         </li>
         <li class="list__item list__item_row">
             <span class="list__col list__col_icon">
-                <i class="fab fa-telegram" aria-hidden="true"></i>
+                <i class="fab fa-telegram-plane" aria-hidden="true"></i>
                 Telegram:
             </span>
             <span class="list__col">
