--- a/_sass/components/_list.scss
+++ b/_sass/components/_list.scss
@@ -27,7 +27,8 @@
         position: relative;
         padding-left: 30px;
 
-        .fa {
+        .fab,
+        .fas {
             font-size: 1em;
             position: absolute;
             left: 0;
