update info header

--- a/_includes/cv/resume.html
+++ b/_includes/cv/resume.html
@@ -1,5 +1,5 @@
 <section class="info">
-    <h2 class="info__header">HTML/CSS разработчик</h2>
+<h2 class="info__header">UI developer</h2>
     <ul class="list list_table">
         <li class="list__item list__item_row">
             <span class="list__col">
