--- a/_includes/cv/experience.html
+++ b/_includes/cv/experience.html
@@ -2,7 +2,7 @@
     <h2 class="info__header">Опыт работы</h2>
     <div class="info-item">
         <div class="info-item_header">
-            <span class="info-item_name">Разработчик web-интерфейсов</span>
+            <span class="info-item_name">UI developer</span>
             <span class="info-item_sub">
                 <i class="fa fa-building" aria-hidden="true"></i>
                 <a href="https://www.smileexpo.ru/" rel="nofolow">«Smile-Expo»</a>
@@ -13,10 +13,14 @@
             </span>
         </div>
         <div class="info-item_text">
-            <p>
-                Верстка выставочных сайтов компании, с использованием фреймворка Bootstrap 3. Было реализовано
-                порядка 20 новых проектов и редизайна старых. Правки и доработки существующих сайтов.
-            </p>
+            <ul>
+                <li>Поддержка текущих проектов компании, внесение правок и доработка функционала. Работа с GitLab.</li>
+                <li>Верстка выставочных сайтов компании c использованием Gulp, препроцессоров для стилей Less/SCSS.
+                    Так же был осуществлен переход от HTML разметки к шаблонизатору Pug.</li>
+                <li>Верстка внешнего интерфейса для Чат-бота компании.</li>
+                <li>Использование JavaScript/JQuery для написания скриптов меню и нестандартных поведений элементов. Работа с DOM.</li>
+                <li>Общение с заказчиком и дизайнерами для внесения правок в проекты, решение спорных моментов.</li>
+            </ul>
             <div class="info-item_keyproject">
                 <span>Ключевой прект: </span>
                 <p>Разработка стартового шаблона на Gulp для автоматизации процесса разработки
