--- a/_includes/cv/education.html
+++ b/_includes/cv/education.html
@@ -4,9 +4,9 @@
         <div class="info-item_header">
             <span class="info-item_name">БАКАЛАВР ИНФОРМАЦИОННЫХ СИСТЕМ</span>
             <span class="info-item_sub">
-                        <i class="fa fa-university" aria-hidden="true"></i>ИвГПУ</span>
+                        <i class="fas fa-university" aria-hidden="true"></i>ИвГПУ</span>
             <span class="info-item_sub">
-                        <i class="fa fa-calendar" aria-hidden="true"></i>Sep 2010 — Jul 2015</span>
+                        <i class="far fa-calendar" aria-hidden="true"></i>Sep 2010 — Jul 2015</span>
         </div>
         <div class="info-item_text">
             <p>
