--- a/_includes/cv/experience.html
+++ b/_includes/cv/experience.html
@@ -4,11 +4,11 @@
         <div class="info-item_header">
             <span class="info-item_name">UI developer</span>
             <span class="info-item_sub">
-                <i class="fa fa-building" aria-hidden="true"></i>
+                <i class="far fa-building" aria-hidden="true"></i>
                 <a href="https://www.smileexpo.ru/" rel="nofolow">«Smile-Expo»</a>
             </span>
             <span class="info-item_sub">
-                <i class="fa fa-calendar" aria-hidden="true"></i>Jan 2016 — until now
+                <i class="far fa-calendar" aria-hidden="true"></i>Jan 2016 — until now
                 <sup class="info-item_sub-sup">2 years 1 month</sup>
             </span>
         </div>
@@ -33,11 +33,11 @@
         <div class="info-item_header">
             <span class="info-item_name">Web developer</span>
             <span class="info-item_sub">
-                <i class="fa fa-building" aria-hidden="true"></i>
+                <i class="far fa-building" aria-hidden="true"></i>
                 <a href="http://pragmatic-studio.ru/" rel="nofolow">«Pragmatik» - Web Studio</a>
             </span>
             <span class="info-item_sub">
-                <i class="fa fa-calendar" aria-hidden="true"></i>Jul 2014 — May 2015
+                <i class="far fa-calendar" aria-hidden="true"></i>Jul 2014 — May 2015
                 <sup class="info-item_sub-sup">11 Months</sup>
             </span>
         </div>
