--- a/_includes/icon-twitter.html
+++ b/_includes/icon-twitter.html
@@ -1,1 +1,1 @@
-<a href="https://twitter.com/{{ include.username }}" target="_blank"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
+<a href="https://twitter.com/{{ include.username }}" target="_blank"><i class="fab fa-twitter fa-2x" aria-hidden="true"></i></a>
