--- a/_layouts/page-nav.html
+++ b/_layouts/page-nav.html
@@ -4,19 +4,13 @@
 {% include head.html %}
 
 <body>
-    <div class="wrapper">
-
-        {% include header-nav.html %}
-
-        <div class="flex-container">
-            <main class="main">
-                {{ content }}
-            </main>
-        </div>
-
-        {% include footer.html %}
-
-    </div>
+    {% include header-nav.html %}
+    
+    <main>
+        {{ content }}
+    </main>
+    
+    {% include footer.html %}
 </body>
 
 </html>
