--- a/_sass/components/_article.scss
+++ b/_sass/components/_article.scss
@@ -5,6 +5,7 @@
 //===============================
 
 .article {
+    width: 100%;
     max-width: 650px;
     margin-right: auto;
     margin-left: auto;
