--- a/_sass/_common.scss
+++ b/_sass/_common.scss
@@ -134,10 +134,11 @@ main {
     }
 }
 
-.footer {
+footer {
     width: 100%;
     padding: 15px;
     align-self: flex-end;
+    text-align: center;
 }
 
 .info {
