--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer txt-xs-center">
+<footer>
     <p class="copyright">© 2016-2018
         {% include icon-github.html %}. Powered by
         <a href="https://jekyllrb.com/" target="_blank" rel="nofollow">Jekyll</a>, with a custom theme.
