--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
 {% include head.html %}
 
 <body>
-    {% include header-h1.html %}
+    {% include header.html %}
 
     <main>
         {{ content }}
