--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,9 @@
 <header class="header header_background header_glass txt-xs-center">
-    {% include filter.html %}
+    <svg version="1.1" xmlns="http://www.w3.org/2000/svg">
+        <filter id="glass-filter">
+            <feGaussianBlur stdDeviation="5"></feGaussianBlur>
+        </filter>
+    </svg>
     <div class="avatar avatar_center">
         <img class="avatar__img" src="/images/avatar.jpg" alt="deeppines">
     </div>
