add new color pallet

--- a/_sass/core/_colors.scss
+++ b/_sass/core/_colors.scss
@@ -20,7 +20,6 @@ $wight: #fff;
 $black: #000;
 
 //== Brand colors
-//
 //## Brand colors for use on website
 
 $gunmetal:         #293241;
@@ -28,3 +27,16 @@ $light-red-ochre:  #EE6C4D;
 $purple-navy:      #3D5A80;
 $pale-cerulian:    #98C1D9;
 $light-cyan:       #E0FBFC;
+
+// Other colors
+
+$background-body: #ebebeb;
+
+// Pines color
+
+$pines-red:    #962d3e;
+$pines-blue:   #118ab2;
+$pines-green:  #589b71;
+$pines-yellow: #f0c808;
+
+
