--- a/_sass/_common.scss
+++ b/_sass/_common.scss
@@ -22,7 +22,7 @@ body {
     max-width: 960px;
     min-height: calc(100% - 50px);
     margin: 25px auto;
-    background: transparent;
+    background-color: $background-body;
     box-shadow: 0 5px 15px 1px transparentize($black, .7);
 
     // Large devices (desktops, less than 1200px)
