generate date in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
-    <p class="copyright">© 2016-2018
+    <p class="copyright">© 2016-{{ "now" | date: "%Y" }}
         {% include icon-github.html %}. Powered by
         <a href="https://jekyllrb.com/" target="_blank" rel="nofollow">Jekyll</a>, with a custom theme.
     </p>
