--- a/_includes/cv/skills.html
+++ b/_includes/cv/skills.html
@@ -24,7 +24,7 @@
         </tr>
         <tr>
             <td>Pug</td>
-            <td>SASS</td>
+            <td>Sass</td>
             <td></td>
             <td></td>
         </tr>
