--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,7 @@
     <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
     {% if page.url != '/' %}
         {% include og.html %}
+        {% include twitter-card.html %}
     {% endif %}
 
     <link rel="stylesheet" href="{{ '/css/main.css' | prepend: site.baseurl }}">
