--- a/_sass/core/_mixins.scss
+++ b/_sass/core/_mixins.scss
@@ -1,46 +1,14 @@
-// scss-lint:disable all
-//====================================//
-//
-//    Mixins library ver 0.1
-//
-//===================================//
+// =============================
+// Mixins library 0.1.0 ver
+// =============================
+@import 'mixins/size';
+@import 'mixins/nolist';
+@import 'mixins/nolink';
+@import 'mixins/nobutton';
+@import 'mixins/clearfix';
+@import 'mixins/imgresponsive';
+@import 'mixins/placeholder';
+@import 'mixins/absolute-center';
+@import 'mixins/absolute-center-x';
+@import 'mixins/absolute-center-y';
 
-
-/// Clearfix
-
-@mixin clearfix {
-    *zoom: 1;
-
-    &::before,
-    &::after {
-        display: table;
-        content: '';
-    }
-
-    &::after {
-        clear: both;
-    }
-}
-
-/// Placeholder text
-/// $color [#eee] - placeholder color
-///
-
-@mixin placeholder($color: #eee ) {
-    // Firefox
-    &::-moz-placeholder {
-        color: $color;
-        opacity: 1; // Override Firefox's unusual default opacity; see https://github.com/twbs/bootstrap/pull/11526
-    }
-
-    &:-ms-input-placeholder { color: $color; } // Internet Explorer 10+
-    &::-webkit-input-placeholder  { color: $color; } // Safari and Chrome
-}
-
-/// No list style
-
-@mixin nolist {
-    padding: 0;
-    margin: 0;
-    list-style: none;
-}
