--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,14 +1,26 @@
 @import 'normalize.css';
 
+html {
+  min-height: 100%;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
 header,
 main,
 footer {
   width: 100%;
-  max-width: 980px;
+  max-width: 995px;
   margin: 0 auto;
+  padding: 0 15px;
 }
 
 main {
+  flex-grow: 1;
   display: flex;
   justify-content: center;
 }
