--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -5,7 +5,8 @@ html {
 }
 
 body {
-  font-family: sans-serif;
+  font-family: Tahoma, Arial, sans-serif;
+  font-weight: 400;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -26,6 +27,12 @@ main {
   justify-content: center;
 }
 
-h1 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 400;
   display: block;
 }
