--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -1,6 +1,6 @@
 .root {
   font-size: 14px;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
