--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,38 +1,2 @@
-@import 'normalize.css';
-
-html {
-  min-height: 100%;
-}
-
-body {
-  font-family: Tahoma, Arial, sans-serif;
-  font-weight: 400;
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-}
-
-header,
-main,
-footer {
-  width: 100%;
-  max-width: 995px;
-  margin: 0 auto;
-  padding: 0 15px;
-}
-
-main {
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: 400;
-  display: block;
-}
+@forward 'global/global';
+@forward 'vendors/vendors';
