--- a/src/components/socials/socials.module.scss
+++ b/src/components/socials/socials.module.scss
@@ -12,8 +12,9 @@
   width: 24px;
   height: 24px;
   border-radius: 50%;
+  color: black;
   cursor: pointer;
-  transition: all 0.3s ease-in-out;
+  transition: color 0.3s ease-in-out;
   text-decoration: none;
 
   &:hover {
