--- a/src/ui/layouts/header/header.module.scss
+++ b/src/ui/layouts/header/header.module.scss
@@ -2,6 +2,6 @@
   display: flex;
   gap: 10px;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
   padding: 10px 0;
 }
