refactor: css variables

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,4 +1,5 @@
 @forward 'fonts/fonts';
+@forward 'variables/variables';
 @forward 'vendors/vendors';
 @forward 'typography/typography';
 @forward 'global/global';
