--- a/src/assets/styles/variables/_variables.scss
+++ b/src/assets/styles/variables/_variables.scss
@@ -1,4 +1,5 @@
-:root {
+:root,
+:root[data-theme='light'] {
   --text-size-xs: 0.69rem;
   --text-size-sm: 0.83rem;
   --text-size-md: 1rem;
@@ -8,4 +9,18 @@
   --text-size-3xl: 2.07rem;
   --text-size-4xl: 2.49rem;
   --text-size-5xl: 2.99rem;
+
+  --color-background: white;
+  --color-foreground: gray;
+  --color-accent: #4d5d6c;
+  --color-text: #1c2939;
+  --color-link: #118ab2;
+}
+
+:root[data-theme='dark'] {
+  --color-background: #1c2939;
+  --color-foreground: #253447;
+  --color-accent: #4d5d6c;
+  --color-text: #d6d8d9;
+  --color-link: #118ab2;
 }
