--- a/src/assets/styles/variables/_variables.scss
+++ b/src/assets/styles/variables/_variables.scss
@@ -10,17 +10,23 @@
   --text-size-4xl: 2.49rem;
   --text-size-5xl: 2.99rem;
 
-  --color-background: white;
-  --color-foreground: gray;
-  --color-accent: #4d5d6c;
-  --color-text: #1c2939;
-  --color-link: #118ab2;
+  --color-white: #d6d8d9;
+  --color-black: #1c2939;
+  --color-navi: #253447;
+  --color-gray: #4d5d6c;
+  --color-blue: #118ab2;
+
+  --color-background: var(--color-white);
+  --color-foreground: var(--color-navi);
+  --color-accent: var(--color-gray);
+  --color-text: var(--color-black);
+
+  --color-link: var(--color-blue);
 }
 
 :root[data-theme='dark'] {
-  --color-background: #1c2939;
-  --color-foreground: #253447;
-  --color-accent: #4d5d6c;
-  --color-text: #d6d8d9;
-  --color-link: #118ab2;
+  --color-background: var(--color-black);
+  --color-foreground: var(--color-navi);
+  --color-accent: var(--color-gray);
+  --color-text: var(--color-white);
 }
