--- a/src/assets/styles/variables/_variables.scss
+++ b/src/assets/styles/variables/_variables.scss
@@ -14,6 +14,7 @@
   --color-black: #1c2939;
   --color-navi: #253447;
   --color-gray: #4d5d6c;
+  --color-lightgray: #b7b5b5;
   --color-blue: #118ab2;
 
   --color-background: var(--color-white);
