--- a/src/ui/components/switcher/switcher.module.scss
+++ b/src/ui/components/switcher/switcher.module.scss
@@ -8,6 +8,7 @@
   cursor: pointer;
   transition: background-color 0.3s ease-in-out;
   box-shadow: inset 0 1px 5px rgba(0, 0, 0, 0.3);
+  overflow: hidden;
 }
 
 .switcherInput {
@@ -27,6 +28,7 @@
   background-color: var(--color-background);
   border-radius: 50%;
   transition: transform 0.3s ease-in-out;
+  overflow: hidden;
 
   & > span {
     position: absolute;
