feat: new color var

--- a/src/assets/styles/variables/_variables.scss
+++ b/src/assets/styles/variables/_variables.scss
@@ -12,6 +12,7 @@
 
   --color-white: #d6d8d9;
   --color-black: #1c2939;
+  --color-black50: rgba(28, 41, 57, 0.5);
   --color-navi: #253447;
   --color-gray: #4d5d6c;
   --color-lightgray: #b7b5b5;
