--- a/src/ui/components/backdrop/backdrop.module.scss
+++ b/src/ui/components/backdrop/backdrop.module.scss
@@ -10,7 +10,9 @@
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
-  transition: opacity 0.3s ease-in-out;
+  transition:
+    opacity 0.3s ease-in-out,
+    visibility 0.3s ease-in-out;
   z-index: 100;
 
   [data-backdrop='true'] & {
