--- a/src/ui/components/modal/modal.module.scss
+++ b/src/ui/components/modal/modal.module.scss
@@ -34,13 +34,21 @@
   padding: 20px;
   margin: auto;
   border-radius: 5px;
-  border: 1px solid var(--color-accent);
-  background-color: var(--color-background);
+  color: var(--color-white);
+  border: 1px solid var(--color-gray);
+  background-color: var(--color-black);
+  box-shadow: 0 0 5px var(--color-black50);
 }
 
 .header {
   display: flex;
   justify-content: space-between;
+}
+
+.body {
+  ul {
+    margin-top: 0;
+  }
 }
 
 .close {
