--- a/src/ui/components/backdrop/backdrop.module.scss
+++ b/src/ui/components/backdrop/backdrop.module.scss
@@ -5,7 +5,6 @@
   width: 100%;
   height: 100%;
   background-color: var(--color-black50);
-  z-index: 100;
   backdrop-filter: blur(5px);
   opacity: 0;
   visibility: hidden;
@@ -13,7 +12,7 @@
   transition:
     opacity 0.3s ease-in-out,
     visibility 0.3s ease-in-out;
-  z-index: 100;
+  z-index: var(--z-index-backdrop);
 
   [data-backdrop='true'] & {
     opacity: 1;
