--- a/src/ui/components/modal/modal.module.scss
+++ b/src/ui/components/modal/modal.module.scss
@@ -10,7 +10,7 @@
   width: 100%;
   height: 100%;
   padding: 15px;
-  z-index: 120;
+  z-index: var(--z-index-modal);
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
