--- a/src/ui/components/projects/components/project/project.module.scss
+++ b/src/ui/components/projects/components/project/project.module.scss
@@ -1,10 +1,25 @@
 .root {
+  text-decoration: none;
   display: flex;
   gap: 15px;
   width: 100%;
+  color: var(--color-text);
+  border: 1px solid var(--color-lightgray);
   padding: 15px 15px;
-  border: 1px solid var(--color-accent);
   border-radius: 4px;
+  transition:
+    border-color 0.3s ease-in-out,
+    background-color 0.3s ease-in-out,
+    box-shadow 0.3s linear;
+
+  &:hover {
+    box-shadow: 0 0 4px var(--color-link);
+  }
+
+  [data-theme='dark'] & {
+    border-color: transparent;
+    background-color: var(--color-foreground);
+  }
 }
 
 .image {
@@ -12,10 +27,24 @@
   width: 50px;
   height: 50px;
   border-radius: 4px;
+
+  svg {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .description {
   display: flex;
   flex-direction: column;
   gap: 10px;
+
+  p {
+    line-height: 1.2;
+  }
+}
+
+.badge {
+  padding-top: 10px;
+  margin-top: auto;
 }
