feat: base snowflakes

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -4,3 +4,5 @@
 @forward 'typography/typography';
 @forward 'global/global';
 @forward 'theme/theme';
+
+@forward '../../ui/components/snowflake/snowflake.module.scss';
