--- a/src/ui/components/avatar/avatar.module.scss
+++ b/src/ui/components/avatar/avatar.module.scss
@@ -1,4 +1,5 @@
 .root {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -13,4 +14,16 @@
     width: 100%;
     height: auto;
   }
+}
+
+.button {
+  font-size: var(--text-size-sm);
+  position: absolute;
+  padding: 2px 8px;
+  border-radius: 3px;
+  color: var(--color-text);
+  border: 1px solid var(--color-background);
+  background-color: var(--color-background);
+  cursor: pointer;
+  display: none;
 }
