--- a/src/ui/components/funblock/funblock.module.scss
+++ b/src/ui/components/funblock/funblock.module.scss
@@ -1,5 +1,24 @@
 .root {
   display: flex;
-  flex-direction: column;
   gap: 10px;
+}
+
+.iconLink {
+  border: 1px solid var(--color-lightgray);
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 45px;
+  height: 45px;
+  color: var(--color-lightgray);
+  transition:
+    color 0.3s ease-in-out,
+    border-color 0.3s ease-in-out;
+  text-decoration: none;
+
+  &:hover {
+    color: var(--color-link);
+    border-color: var(--color-link);
+  }
 }
