--- a/src/assets/styles/typography/_typography.scss
+++ b/src/assets/styles/typography/_typography.scss
@@ -32,13 +32,20 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6 {
   font-weight: 400;
   line-height: 1.15;
   display: block;
 }
 
-h1 {
+h1,
+.h1 {
   font-size: var(--text-size-4xl);
 
   @media (max-width: 576px) {
@@ -46,19 +53,23 @@ h1 {
   }
 }
 
-h2 {
+h2,
+.h2 {
   font-size: var(--text-size-3xl);
 }
 
-h3 {
+h3,
+.h3 {
   font-size: var(--text-size-2xl);
 }
 
-h4 {
+h4,
+.h4 {
   font-size: var(--text-size-xl);
 }
 
-h5 {
+h5,
+.h5 {
   font-size: var(--text-size-lg);
 }
 
